#summary Changelog for all changes since the fork

= Changes =
== Version 1.06 ==
  * Removed support for server-versions lower then 1.5.3 (it's 4 months old now, please update your server if you still use an old version)
  * 

== Version 1.05 ==
  * Refreshing more often during update, show progress
  * Reduced the number of updates beeing done, every piece of data is updated only once in 2 minutes if necessary or if you do refresh manually (via menu).
  * Store articles marked as read also for whole feeds/categoires. You can mark a feed as read while working offline, all articles in it the moment you marked it read will be synchronized with the server when you get online next time.
  * Refactored ImageCache, removed unused abstractions
  * Fixed some bugs
  * Fixed a problem with articles beeing marked as read only when opening the feed
  * Will remove support for server-versions prior to 1.5.3 in next release 

== Version 1.04 ==
  * Do VACUUM only once a month or manually from preferences
  * Fixed encoding of passwords with special characters
  * Tried to fix bug due to wrong server-version detected

== Version 1.03 (2) ==
  * Fixed Issue #67: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=67 Date & time settings not honoured])
  * New preferences allow you to change date and time formatting
  * Fixed Issue #68: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=68 Justified (Blocksatz) looks awkward in some articles])
  * New preference allows you to change display of articles (justified or flush left)
  * Fixed Issue #70: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=70 passwords with spaces aren't escaped ])
  * Fixed reloading of preferences after changes, completely revamped the way preferences are handled and reloaded after beeing changed
  * Dialog-windows are dismissed when they are not needed anymore
  * HTTP-Auth credentials are reloaded after changes