@@ -18,5 +18,6 @@ package org.ttrssreader.gui.interfaces;
 public interface ICacheEndListener {
     
     public void onCacheEnd();
+    public void onCacheProgress(int taskCount, int progress);
     
 }
